--- a/resources/sass/pages/user/_index.scss
+++ b/resources/sass/pages/user/_index.scss
@@ -142,7 +142,6 @@
 
     .animals__item {
         flex: 1 0 23.5%;
-        aspect-ratio: 1 / 1;
         max-width: 23.5%;
     }
 
